<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment"
    android:background="@color/colorWHite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/appColor">

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="30dp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/toolbar_settings"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar_settings"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_profile_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/logout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

</RelativeLayout>