<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    app:cardCornerRadius="20dp"
    android:paddingLeft="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/transparent">

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorAccent">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorAccent"
                        android:src="@drawable/maps"/>

                <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example"
                        android:textColor="@color/colorBlack"
                        android:layout_gravity="center"
                        android:textSize="15dp"/>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/open_map_bottom_menu"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorHint">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_file_open"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/openMap"
                        android:textColor="@color/appColor"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/download_map_bottom_menu"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorHint">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_file_download"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/downloadMap"
                        android:textColor="@color/appColor"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

</androidx.cardview.widget.CardView>