<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.ProfileFragment"
    android:background="@color/colorWHite">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.PopupOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWHite"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorWHite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:background="@color/colorWHite">


                <TextView
                    android:id="@+id/profile_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/nicknameTop"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="90dp" />

                <RelativeLayout
                    android:id="@+id/userDataRL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="50dp"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:id="@+id/followers_count"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginTop="40dp"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="15dp"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:layout_below="@+id/followers_count"/>
                    <TextView
                        android:id="@+id/following_count"
                        android:layout_marginTop="40dp"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:layout_toRightOf="@+id/followers_count"/>
                    <TextView
                        android:id="@+id/following"
                        android:layout_width="73dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/following"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:layout_toRightOf="@id/followers"
                        android:layout_below="@id/following_count"/>
                </RelativeLayout>

                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/profile_bio"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"
                    android:maxLength="100"
                    android:maxLines="4"
                    android:autoSizeMinTextSize="12dp"
                    android:layout_below="@id/userDataRL"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_website"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:autoSizeMinTextSize="12dp"
                    android:layout_below="@id/profile_bio"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="10dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_avatar"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_alignParentRight="true"
                        app:civ_border_width="2dp"
                        android:layout_marginRight="10dp"
                        app:civ_border_color="@color/colorBlack"
                        android:src="@drawable/man"/>

                </LinearLayout>
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:background="@color/appColor"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                >


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/saved_posts"
                        android:src="@drawable/unsave" />




            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <include layout="@layout/content_scrolling" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>