<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostFragment"
    android:orientation="vertical"
    android:background="@color/colorWHite">

    <!-- TODO: Update blank fragment layout -->
    <Toolbar
        android:id="@+id/toolbar_post_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor">

        <ImageView
            android:id="@+id/back_post_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_nick_toolbar"
            android:textColor="@color/colorBlack"/>
    </Toolbar>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_post_fragment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorBlack"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/nickname_post_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nicknameTop"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/country_post_fragment"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:layout_weight="2"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/days_post_fragment"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                />



            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="10dp"/>


            <TextView
                android:id="@+id/distance_post_fragment"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </LinearLayout>



            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/images_post_fragment"
                android:layout_width="match_parent"
                android:layout_height="416dp"
                android:padding="5dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAutoCycleEnabled="false"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF" >

                <ImageView
                    android:id="@+id/map_post_fragment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/placeholder"
                    android:layout_gravity="right"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="5dp"/>

                <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:id="@+id/difficulty_post_fragment"
                        android:layout_marginRight="40dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="right"/>

            </com.smarteist.autoimageslider.SliderView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/likes_post_fragment"
                android:background="@drawable/notification"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:id="@+id/comments_post_fragment"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/comment"
                android:layout_marginLeft="5dp"/>

            <ImageView
                android:id="@+id/posts_save"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/unsave"
                android:layout_marginLeft="5dp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/likes_number_post_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/description_post_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>