<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SomeUserProfileFragment"
    android:background="@color/colorWHite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_some_user"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.PopupOverlay"
        android:background="@color/colorWHite">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout_some_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar_some_user"
            android:background="@color/colorWHite">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true">

                <TextView
                    android:id="@+id/nickname_some_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/nicknameTop"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="120dp"
                    android:layout_marginTop="90dp"
                    android:textColor="@color/colorBlack"
                    />

                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/follow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_follow"
                    android:background="@color/transparent"
                    android:layout_marginTop="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"/>



                <RelativeLayout
                    android:id="@+id/some_user_data_RL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="60dp"
                    android:layout_alignParentRight="true">


                    <TextView
                        android:id="@+id/followers_count_some_user"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginTop="40dp"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/followers_some_user"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="15dp"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:layout_below="@+id/followers_count_some_user"/>
                    <TextView
                        android:id="@+id/following_count_some_user"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:layout_toRightOf="@id/followers_count_some_user"/>

                    <TextView
                        android:id="@+id/following_some_user"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/following"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:layout_toRightOf="@+id/followers_some_user"
                        android:layout_below="@+id/following_count_some_user"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/profile_bio_some_user"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"
                    android:maxLength="100"
                    android:autoSizeMinTextSize="12dp"
                    android:layout_below="@+id/some_user_data_RL"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:id="@+id/some_user_profile_website"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"
                    android:maxLength="100"
                    android:autoSizeMinTextSize="12dp"
                    android:layout_below="@id/profile_bio_some_user"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_avatar_some_user"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/man"
                        app:civ_border_width="2dp"
                        android:layout_marginRight="10dp"
                        app:civ_border_color="@color/colorBlack"/>


                </LinearLayout>
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_some_user"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@color/appColor"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <ImageView
                    android:id="@+id/some_user_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/add_post_some_user_profle"
                    android:background="@drawable/add_post"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_scrolling_some_user_profile" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>